# Employed-in

./: .gitignore  Dockerfile  pyproject.toml
.vim/: coc-settings.json
src/: .env.example  config.py  database.py  main.py
src/apis/accounts/: __init__.py  auth.py  profile.py
src/interfaces/: permission.py
src/models/: accounts.py  post.py  profile.py  repository.py
src/schema/: request.py  response.py
src/service/: accounts.py
tests/apis/: conftest.py
tests/apis/accounts/: test_auth.py  test_profile.py
